refactor: update code and README